Ingress/catalog-application.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  type: ClusterIP
  selector:
    app: catalog-application
  ports:
    - name: catalogsvcport
      port: 80
      targetPort: catalogwebport
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deploy
spec:
  minReadySeconds: 5
  replicas: 3
  selector:
    matchLabels:
      app: catalog-application
      version: v1.0
  template:
    metadata:
      name: catalog-application-pod
      labels:
        app: catalog-application
        version: v1.0
    spec:
      containers:
        - name: catalogc
          image: panneercts/dm-catalog-service:v1.0
          ports:
            - name: catalogwebport
              containerPort: 80
              protocol: TCP
